# rocker-mcp

./: Dockerfile  README.md  install_packages.R  main.py  packages.txt  pyproject.toml
.github/workflows/: release-docker.yml
src/rocker_mcp/: __init__.py
src/rocker_mcp/r_manager/: __init__.py  find_r.py  run_r.py
src/rocker_mcp/servers/: __init__.py  r_mcp_server.py
